# hypr-dotfiles

./: .gitignore  README.md
dunst/: dunstrc
fastfetch/: config.jsonc
hyprland/: hyprland.conf  hyprlock.conf  hyprlock.sh
kitty/: current-theme.conf  kitty.conf
rofi/: clipboard-config.rasi  clipboard-theme.rasi  config.rasi  theme.rasi
swww/: random-wallpaper.sh  rofi-theme-wallpaper.rasi  rofi-wallpaper-launcher.sh
tauon/: Charmed.ttheme
waybar/: bottom.jsonc  cpu-temp.sh  music-module  network-status.sh  style.css  top.jsonc
waybar/music-module/: Cargo.toml  README.md
waybar/music-module/src/: event_bus.rs  main.rs
waybar/music-module/src/effects/: effect.rs  ellipsis.rs  marquee.rs  mod.rs  text_effect.rs
waybar/music-module/src/interfaces/: dbus_client.rs
waybar/music-module/src/models/: args.rs  mod.rs  mpris_metadata.rs  mpris_playback.rs  player_client.rs  player_state.rs
waybar/music-module/src/services/: dbus_monitor.rs  display.rs  mod.rs  player_manager.rs  runnable.rs
zsh/: whiteth.zsh-theme
