[package]
name = "waybar-module-music"
version = "0.1.6"
edition = "2021"
description = "MPRIS music module for Waybar"
license = "GPL3"
repository = "https://github.com/Andeskjerf/waybar-module-music"

[profile.release]
lto = true
opt-level = 3
strip = true
codegen-units = 1
panic = "abort"

[dependencies]
bincode = "2.0.1"
clap = { version = "4.5.41", features = ["derive"] }
dbus = "0.9.7"
dirs = "6.0.0"
log = "0.4.27"
simplelog = "0.12.2"
